<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp" >

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_yourLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_yourLocation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_latitude_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_latitude_heading" />

        <TextView
            android:id="@+id/tv_latitude_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_default" />

        <TextView
            android:id="@+id/tv_longitude_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_longitude_heading" />

        <TextView
            android:id="@+id/tv_longitude_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_default" />

        <TextView
            android:id="@+id/tv_timestamp_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_timestamp_heading" />

        <TextView
            android:id="@+id/tv_timestamp_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_default" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_showCurrentLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_showCurrentLocation" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_showAllLocations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_showAllLocations" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_showHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_showHistory" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>